# Cybersecurity-Posture-Assessment-Tool

./: README.md  pyproject.toml
app/: __init__.py
app/main/: routes.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  index.html
